# VibranceFlow-core

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  gui_main.py  main.py  profiles.json.example  pyproject.toml  requirements.txt
.github/: SECURITY.md
.github/workflows/: build-windows.yml  release-windows.yml
core/: __init__.py  audio_manager.py  autostart.py  display_manager.py  engine.py  models.py  process_enum.py  profile_manager.py  single_instance.py  window_monitor.py
core/bindings/: __init__.py  gdi_gamma.py  nvapi_display.py
core/remote/: __init__.py  bridge.py  crypto.py  firewall.py  handlers.py  health.py  pairing.py  pin.py  protocol.py  server.py
docs/: ERROR_HANDLING.md  FALSE_POSITIVE_RUNBOOK.md  REMOTE_PROTOCOL.md
packaging/: README.md  build_appimage.sh  build_windows.ps1  build_windows_debug.ps1  build_windows_onedir.ps1  nuitka_common.ps1
scripts/: diagnose_lan_remote.py  generate_brand_assets.py  test_disconnect_clients.py  test_fernet_cmds.py  test_pair_pin_client.py  test_prepare_pairing.py  test_remote_boot.py  verify_protocol_v1.py  ws_remote_client.py
ui/: __init__.py  app_context.py  brand_assets.py  icon_loader.py  layout.py  main_window.py  modal_utils.py  pairing_dialog.py  process_picker.py  theme.py  tray.py  util.py  win32_window.py  window_chrome.py
ui/Logos/: convert_to_ico.py
