[tool.poetry]
name = "VibranceFlow-core"
version = "0.1.0"
description = "Windows per-game color profiles with optional mobile remote control"
authors = ["VibranceFlow"]
readme = "README.md"
license = "GPL-3.0-only"
packages = [{ include = "core" }, { include = "ui" }]

[tool.poetry.dependencies]
python = "^3.11"
customtkinter = ">=5.2.0"
Pillow = ">=10.0.0"
pystray = ">=0.19.0"
websockets = ">=12.0,<16.0"
cryptography = ">=42.0.0"
qrcode = { version = ">=7.4.0", extras = ["pil"] }
pycaw = "^20251023"
pulsectl = "^24.12.0"

[tool.poetry.group.packaging]
optional = true

[tool.poetry.group.packaging.dependencies]
nuitka = ">=2.0.0"

[tool.poetry.scripts]
VibranceFlow-gui = "gui_main:main"
VibranceFlow = "main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
